[package]
name = "http_extension_file"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http_extension = { path = "../http_extension" }
http_common = { path = "../http_common" }
chrono = "0.4.22"
humansize = "2.0.0"

[lib]
crate-type = ["cdylib", "rlib"]
